Starting V2 of makeitshort Refactored existing code